# MapAI-Competition

./: .gitignore  README.md  create_submission.py  dataloader.py  train.py  utils.py
.github/workflows/: build_report.yaml  evaluate.yml
config/: data.yaml  massachusetts.yaml
data/: README.md
scripts/: pyproject.toml
scripts/mapai_toolkit/: dataloader.py
team_aiveo/: pyproject.toml
team_aiveo/src/: README.md  model_task_1.py
team_template/: README.md  create_submission.py  dataloader.py  datautils.py  eval_functions.py  evaluate_task_1.py  evaluate_task_2.py  main.py  pyproject.toml  requirements.txt  train.py
team_template/config/: data.yaml  evaluation_task_1.yaml  evaluation_task_2.yaml
team_template/src/: README.md  dataloader.py  eval_functions.py  evaluate_task_1.py  evaluate_task_2.py  evaluation.py  main.py  model_task_2.py  results_task_1.json  results_task_2.json  train.py  utils.py
team_template/submission/task1/: opts.yaml
teamtemplate/: dataloader.py  train.py
teamtemplate/runs/task_2/run_0/: opts.yaml
teamtemplate/runs/task_2/run_1/: opts.yaml
teamtemplate/runs/task_2/run_2/: opts.yaml
teamtemplate/runs/task_2/run_3/: opts.yaml
teamtemplate/runs/task_2/run_4/: opts.yaml
web/: pyproject.toml
web/src/: main.py
web/src/templates/: index.html
