[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "teamtemplate pyproject"
description = "Configuring the environment for running python and ML"
requires-python = ">=3.7"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch==1.12.1",
    "torchvision==0.13.1",
    "tqdm==4.64.0",
    "opencv-python==4.6.0.66",
    "numpy==1.17.4",
    "datasets==2.4.0",
    "tomli==2.0.1",
    "pyarrow==9.0.0"
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["src*"]  # package names should match these glob patterns (["*"] by default)
exclude = [
    "node_modules*",
    "scripts*",
    "tests*",
    "venv*"
]  # exclude packages matching these glob patterns (empty by default)
